--- a/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.escaped.html
+++ b/patterns/04-pages-04-hankesivu-read-mode/04-pages-04-hankesivu-read-mode.escaped.html
@@ -285,11 +285,11 @@
       &lt;/div&gt;
     &lt;/div&gt;
     &lt;div class=&quot;content-item large&quot;&gt;
-      &lt;div id=&quot;showParticipations&quot; class=&quot;content-item large participations responsive-list-block&quot;&gt;
+      &lt;div id=&quot;showParticipations&quot; class=&quot;content-item large participations cf&quot;&gt;
         &lt;h2 class=&quot;ongoing&quot;&gt;
           Menossa olevat osallistumiset
         &lt;/h2&gt;
-        &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
+        &lt;div class=&quot;lift-button gray-base participation float-left&quot;&gt;
           &lt;div class=&quot;count-container&quot;&gt;
             &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
             &lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
@@ -297,7 +297,7 @@
           &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Ymp&Atilde;&curren;rist&Atilde;&para;n hyvinvointi - miten sit&Atilde;&curren; voidaan...&lt;/a&gt;
           &lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
         &lt;/div&gt;
-        &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
+        &lt;div class=&quot;lift-button gray-base participation float-left&quot;&gt;
           &lt;div class=&quot;count-container&quot;&gt;
             &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
             &lt;a href=&quot;//www.foo.bar&quot;&gt;24&lt;/a&gt;
@@ -305,7 +305,7 @@
           &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Kaupungin asukkaiden hyvinvointi ja osallistu...&lt;/a&gt;
           &lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
         &lt;/div&gt;
-        &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
+        &lt;div class=&quot;lift-button gray-base participation float-left&quot;&gt;
           &lt;div class=&quot;count-container&quot;&gt;
             &lt;span class=&quot;icon-span icon-comment&quot;&gt;&lt;/span&gt;
             &lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
@@ -313,45 +313,51 @@
           &lt;a class=&quot;icon-lift-link&quot; href=&quot;//www.foo.bar&quot;&gt;Miten nyt ker&Atilde;&curren;tt&Atilde;&curren;v&Atilde;&curren; rahoitus tulisi sijoittaa?&lt;/a&gt;
           &lt;span class=&quot;date&quot;&gt;26.5. asti&lt;/span&gt;
         &lt;/div&gt;
-        &lt;div id=&quot;btnAddParticipationContainer&quot; class=&quot;lift-button gray-base is-hidden inline-element&quot;&gt;
-          &lt;div class=&quot;add-icon-container&quot;&gt;
-            &lt;span class=&quot;icon-span icon-add&quot;&gt;&lt;/span&gt;
-            &lt;a id=&quot;btnAddParticipation&quot;&gt;Luo uusi osallistuminen&lt;/a&gt;
+        &lt;div id=&quot;btnAddParticipationContainer&quot; class=&quot;lift-button gray-base is-hidden float-left&quot;&gt;
+          &lt;div class=&quot;icon-container&quot;&gt;
+            &lt;a id=&quot;btnAddParticipationIcon&quot;&gt;
+              &lt;span class=&quot;icon-span icon-add&quot;&gt;&lt;/span&gt;
+            &lt;/a&gt;
           &lt;/div&gt;
+          &lt;a class=&quot;icon-lift-link&quot; id=&quot;btnAddParticipation&quot;&gt;Luo uusi osallistuminen&lt;/a&gt;
         &lt;/div&gt;
       &lt;/div&gt;
-      &lt;div id=&quot;addParticipations&quot; class=&quot;content-item large participations responsive-list-block inline-element&quot;&gt;
+      &lt;div id=&quot;addParticipations&quot; class=&quot;content-item large participations cf&quot;&gt;
         &lt;h2 class=&quot;create&quot;&gt;
           Luo uusi osallistuminen
         &lt;/h2&gt;
-        &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
-          &lt;div class=&quot;add-icon-container&quot;&gt;
+        &lt;div class=&quot;lift-button gray-base participation float-left&quot;&gt;
+          &lt;div class=&quot;icon-container&quot;&gt;
             &lt;span class=&quot;icon-span icon-chat&quot;&gt;&lt;/span&gt;
-            &lt;a&gt;Luo reaaliaikainen keskustelu&lt;/a&gt;
           &lt;/div&gt;
+          &lt;a&gt;Luo reaaliaikainen keskustelu&lt;/a&gt;
         &lt;/div&gt;
-        &lt;div class=&quot;lift-button gray-base participation inline-element&quot;&gt;
-          &lt;div class=&quot;add-icon-container&quot;&gt;
+        &lt;div class=&quot;lift-button gray-base participation float-left&quot;&gt;
+          &lt;div class=&quot;icon-container&quot;&gt;
             &lt;span class=&quot;icon-span icon-forum&quot;&gt;&lt;/span&gt;
-            &lt;a&gt;Luo vapaamuotoinen keskustelu&lt;/a&gt;
           &lt;/div&gt;
+          &lt;a&gt;Luo vapaamuotoinen keskustelu&lt;/a&gt;
         &lt;/div&gt;
-        &lt;div id=&quot;btnCancelParticipationContainer&quot; class=&quot;lift-button gray-base cancel is-hidden inline-element&quot;&gt;
-          &lt;div class=&quot;cancel-icon-container&quot;&gt;
-            &lt;span class=&quot;icon-span icon-cancel&quot;&gt;&lt;/span&gt;
-            &lt;a id=&quot;btnCancelParticipation&quot;&gt;Palaa osallistumislistaan&lt;/a&gt;
+        &lt;div id=&quot;btnCancelParticipationContainer&quot; class=&quot;lift-button gray-base cancel is-hidden float-left&quot;&gt;
+          &lt;div class=&quot;icon-container&quot;&gt;
+            &lt;a id=&quot;btnCancelParticipationIcon&quot;&gt;
+              &lt;span class=&quot;icon-span icon-cancel&quot;&gt;&lt;/span&gt;
+            &lt;/a&gt;
           &lt;/div&gt;
+          &lt;a id=&quot;btnCancelParticipation&quot;&gt;Palaa osallistumislistaan&lt;/a&gt;
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
     &lt;div class=&quot;g&quot;&gt;
       &lt;div class=&quot;g-2up&quot;&gt;
         &lt;div class=&quot;gi&quot;&gt;
-          &lt;div class=&quot;content-item large fadeout&quot;&gt;
-            &lt;img id=&quot;chartHankeGantt&quot; src=&quot;../../images/fpo_square.png&quot; alt=&quot;Gantt-kuva&quot; /&gt;
-            &lt;p class=&quot;read-more&quot;&gt;
-              &lt;a href=&quot;&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
-            &lt;/p&gt;
+          &lt;div class=&quot;content-item large&quot;&gt;
+            &lt;div class=&quot;fadeout&quot;&gt;
+              &lt;img id=&quot;chartHankeGantt&quot; src=&quot;../../images/fpo_square.png&quot; alt=&quot;Gantt-kuva&quot; /&gt;
+              &lt;p class=&quot;read-more&quot;&gt;
+                &lt;a href=&quot;&quot;&gt;Lue lis&Atilde;&curren;&Atilde;&curren;&lt;/a&gt;
+              &lt;/p&gt;
+            &lt;/div&gt;
           &lt;/div&gt;
           &lt;div class=&quot;content-item large participator-list&quot;&gt;
             &lt;div class=&quot;helper-container&quot;&gt;
@@ -550,7 +556,7 @@
               &lt;li&gt;Helsinki&lt;/li&gt;
               &lt;li&gt;Tampere&lt;/li&gt;
             &lt;/ul&gt;
-          &lt;/div&gt;          
+          &lt;/div&gt;
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
