replaced patternlabs rems with ems. added min-width to avatars to fix IE8 problem. added button group for radio buttons.

--- a/patterns/00-atoms-06-buttons-01-button-groups/00-atoms-06-buttons-01-button-groups.escaped.html
+++ b/patterns/00-atoms-06-buttons-01-button-groups/00-atoms-06-buttons-01-button-groups.escaped.html
@@ -77,3 +77,18 @@
 		&lt;/label&gt;
 	&lt;/div&gt;
 &lt;/form&gt;
+
+&lt;ul class=&quot;btn-group radiogroup&quot;&gt;
+	&lt;li&gt;
+		&lt;input id=&quot;rbl0&quot; type=&quot;radio&quot; value=&quot;0&quot; name=&quot;example2&quot; /&gt;
+		&lt;label for=&quot;rbl0&quot;&gt;Peruttu&lt;/label&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;input id=&quot;rbl1&quot; type=&quot;radio&quot; value=&quot;1&quot; name=&quot;example2&quot;/&gt;
+		&lt;label for=&quot;rbl1&quot;&gt;Suunnitteilla&lt;/label&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;input id=&quot;rbl2&quot; type=&quot;radio&quot; value=&quot;2&quot; name=&quot;example2&quot;/&gt;
+		&lt;label for=&quot;rbl2&quot;&gt;Julkaistu&lt;/label&gt;
+	&lt;/li&gt;
+&lt;/ul&gt;
