--- a/patterns/00-atoms-06-buttons-01-button-groups/00-atoms-06-buttons-01-button-groups.html
+++ b/patterns/00-atoms-06-buttons-01-button-groups/00-atoms-06-buttons-01-button-groups.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1402997058" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1403080713" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402997058" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402997058" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1403080713" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1403080713" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -112,7 +112,22 @@
 			<input name="example" type="radio">Ehdotus lainvalmisteluun ryhtymisestä
 		</label>
 	</div>
-</form>	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+</form>
+
+<ul class="btn-group radiogroup">
+	<li>
+		<input id="rbl0" type="radio" value="0" name="example2" />
+		<label for="rbl0">Peruttu</label>
+	</li>
+	<li>
+		<input id="rbl1" type="radio" value="1" name="example2"/>
+		<label for="rbl1">Suunnitteilla</label>
+	</li>
+	<li>
+		<input id="rbl2" type="radio" value="2" name="example2"/>
+		<label for="rbl2">Julkaistu</label>
+	</li>
+</ul>	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="../../js/modernizr.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
@@ -162,10 +177,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1402997058">
+	<script id="pl-js-polyfill-insert-1403080713">
 		(function() {
 			if (self != top) {
-				var cb = '1402997058';
+				var cb = '1403080713';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -174,10 +189,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1402997058">
+	<script id="pl-js-insert-1403080713">
 		(function() {
 			if (self != top) {
-				var cb = '1402997058';
+				var cb = '1403080713';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
