--- a/patterns/00-atoms-06-buttons/index.html
+++ b/patterns/00-atoms-06-buttons/index.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1402997058" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1403080713" media="all" />
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +25,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1402997058" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1402997058" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1403080713" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1403080713" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -176,6 +176,21 @@
 		</label>
 	</div>
 </form>
+
+<ul class="btn-group radiogroup">
+	<li>
+		<input id="rbl0" type="radio" value="0" name="example2" />
+		<label for="rbl0">Peruttu</label>
+	</li>
+	<li>
+		<input id="rbl1" type="radio" value="1" name="example2"/>
+		<label for="rbl1">Suunnitteilla</label>
+	</li>
+	<li>
+		<input id="rbl2" type="radio" value="2" name="example2"/>
+		<label for="rbl2">Julkaistu</label>
+	</li>
+</ul>
 							<div class="sg-code" style="display: none">
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
@@ -259,6 +274,21 @@
 		&lt;/label&gt;
 	&lt;/div&gt;
 &lt;/form&gt;
+
+&lt;ul class=&quot;btn-group radiogroup&quot;&gt;
+	&lt;li&gt;
+		&lt;input id=&quot;rbl0&quot; type=&quot;radio&quot; value=&quot;0&quot; name=&quot;example2&quot; /&gt;
+		&lt;label for=&quot;rbl0&quot;&gt;Peruttu&lt;/label&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;input id=&quot;rbl1&quot; type=&quot;radio&quot; value=&quot;1&quot; name=&quot;example2&quot;/&gt;
+		&lt;label for=&quot;rbl1&quot;&gt;Suunnitteilla&lt;/label&gt;
+	&lt;/li&gt;
+	&lt;li&gt;
+		&lt;input id=&quot;rbl2&quot; type=&quot;radio&quot; value=&quot;2&quot; name=&quot;example2&quot;/&gt;
+		&lt;label for=&quot;rbl2&quot;&gt;Julkaistu&lt;/label&gt;
+	&lt;/li&gt;
+&lt;/ul&gt;
 									</code>
 								</pre>
 							</div>
@@ -580,10 +610,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1402997058">
+	<script id="pl-js-polyfill-insert-1403080713">
 		(function() {
 			if (self != top) {
-				var cb = '1402997058';
+				var cb = '1403080713';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -592,10 +622,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1402997058">
+	<script id="pl-js-insert-1403080713">
 		(function() {
 			if (self != top) {
-				var cb = '1402997058';
+				var cb = '1403080713';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
