added ie8.css just in case it is needed and added lap colors class for cyan

--- a/patterns/00-atoms-01-global-00-colors/00-atoms-01-global-00-colors.escaped.html
+++ b/patterns/00-atoms-01-global-00-colors/00-atoms-01-global-00-colors.escaped.html
@@ -50,8 +50,8 @@
 		&lt;span class=&quot;sg-label&quot;&gt;#F16521&lt;/span&gt;
 	&lt;/li&gt;
 	&lt;li&gt;
-		&lt;span class=&quot;sg-swatch color--a&quot;&gt;&lt;/span&gt;
-		&lt;span class=&quot;sg-label&quot;&gt;#12c4ae&lt;/span&gt;
+		&lt;span class=&quot;sg-swatch color--b&quot;&gt;&lt;/span&gt;
+		&lt;span class=&quot;sg-label&quot;&gt;#12C4AE&lt;/span&gt;
 	&lt;/li&gt;
 &lt;/ul&gt;
 
