--- a/patterns/01-molecules-05-navigation-07-process-nav/01-molecules-05-navigation-07-process-nav.escaped.html
+++ b/patterns/01-molecules-05-navigation-07-process-nav/01-molecules-05-navigation-07-process-nav.escaped.html
@@ -23,10 +23,10 @@
 
 &lt;div class=&quot;process-actions&quot;&gt;
 	&lt;ul&gt;
-		&lt;li class=&quot;action-item&quot;&gt;&lt;a class=&quot;btn prev&quot; rel=&quot;prev&quot; href=&quot;&quot;&gt;&lt;i class=&quot;icon-arrow-back&quot;&gt;&lt;/i&gt;Edellinen&lt;/a&gt;&lt;/li&gt;
+		&lt;li class=&quot;action-item previous-item&quot;&gt;&lt;a class=&quot;btn prev&quot; rel=&quot;prev&quot; href=&quot;&quot;&gt;&lt;i class=&quot;icon-arrow-back&quot;&gt;&lt;/i&gt;Edellinen&lt;/a&gt;&lt;/li&gt;
+		&lt;li class=&quot;action-item next-item&quot;&gt;&lt;a class=&quot;btn next&quot; rel=&quot;next&quot; href=&quot;&quot;&gt;Jatka&lt;i class=&quot;icon-arrow-forward&quot;&gt;&lt;/i&gt;&lt;/a&gt;&lt;/li&gt;
 		&lt;li class=&quot;action-item middle-section&quot;&gt;
 			&lt;input class=&quot;btn&quot; href=&quot;&quot; value=&quot;Tallenna ja keskeyt&auml;&quot;&gt;
 		&lt;/li&gt;
-		&lt;li class=&quot;action-item&quot;&gt;&lt;a class=&quot;btn next&quot; rel=&quot;next&quot; href=&quot;&quot;&gt;Jatka&lt;i class=&quot;icon-arrow-forward&quot;&gt;&lt;/i&gt;&lt;/a&gt;&lt;/li&gt;
 	&lt;/ul&gt;
 &lt;/div&gt;
