--- a/patterns/01-molecules-05-navigation/index.html
+++ b/patterns/01-molecules-05-navigation/index.html
@@ -10,7 +10,11 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1403088161" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1404117941" media="all" />
+		<!--[if lt IE 9]>
+			<link href="../../ie8.css" rel="stylesheet"/>
+		<![endif]-->
+
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +29,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1403088161" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1403088161" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404117941" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404117941" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -204,11 +208,11 @@
 
 <div class="process-actions">
 	<ul>
-		<li class="action-item"><a class="btn prev" rel="prev" href=""><i class="icon-arrow-back"></i>Edellinen</a></li>
+		<li class="action-item previous-item"><a class="btn prev" rel="prev" href=""><i class="icon-arrow-back"></i>Edellinen</a></li>
+		<li class="action-item next-item"><a class="btn next" rel="next" href="">Jatka<i class="icon-arrow-forward"></i></a></li>
 		<li class="action-item middle-section">
 			<input class="btn" href="" value="Tallenna ja keskeytä">
 		</li>
-		<li class="action-item"><a class="btn next" rel="next" href="">Jatka<i class="icon-arrow-forward"></i></a></li>
 	</ul>
 </div>
 							<div class="sg-code" style="display: none">
@@ -240,11 +244,11 @@
 
 &lt;div class=&quot;process-actions&quot;&gt;
 	&lt;ul&gt;
-		&lt;li class=&quot;action-item&quot;&gt;&lt;a class=&quot;btn prev&quot; rel=&quot;prev&quot; href=&quot;&quot;&gt;&lt;i class=&quot;icon-arrow-back&quot;&gt;&lt;/i&gt;Edellinen&lt;/a&gt;&lt;/li&gt;
+		&lt;li class=&quot;action-item previous-item&quot;&gt;&lt;a class=&quot;btn prev&quot; rel=&quot;prev&quot; href=&quot;&quot;&gt;&lt;i class=&quot;icon-arrow-back&quot;&gt;&lt;/i&gt;Edellinen&lt;/a&gt;&lt;/li&gt;
+		&lt;li class=&quot;action-item next-item&quot;&gt;&lt;a class=&quot;btn next&quot; rel=&quot;next&quot; href=&quot;&quot;&gt;Jatka&lt;i class=&quot;icon-arrow-forward&quot;&gt;&lt;/i&gt;&lt;/a&gt;&lt;/li&gt;
 		&lt;li class=&quot;action-item middle-section&quot;&gt;
 			&lt;input class=&quot;btn&quot; href=&quot;&quot; value=&quot;Tallenna ja keskeyt&auml;&quot;&gt;
 		&lt;/li&gt;
-		&lt;li class=&quot;action-item&quot;&gt;&lt;a class=&quot;btn next&quot; rel=&quot;next&quot; href=&quot;&quot;&gt;Jatka&lt;i class=&quot;icon-arrow-forward&quot;&gt;&lt;/i&gt;&lt;/a&gt;&lt;/li&gt;
 	&lt;/ul&gt;
 &lt;/div&gt;
 									</code>
@@ -304,10 +308,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1403088161">
+	<script id="pl-js-polyfill-insert-1404117941">
 		(function() {
 			if (self != top) {
-				var cb = '1403088161';
+				var cb = '1404117941';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -316,10 +320,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1403088161">
+	<script id="pl-js-insert-1404117941">
 		(function() {
 			if (self != top) {
-				var cb = '1403088161';
+				var cb = '1404117941';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
