--- a/patterns/01-molecules-05-navigation-07-process-nav/01-molecules-05-navigation-07-process-nav.html
+++ b/patterns/01-molecules-05-navigation-07-process-nav/01-molecules-05-navigation-07-process-nav.html
@@ -10,7 +10,11 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1403088161" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1404117941" media="all" />
+		<!--[if lt IE 9]>
+			<link href="../../ie8.css" rel="stylesheet"/>
+		<![endif]-->
+
 		<!--[if lt IE 10]>
 			<style type="text/css">
 				.og-share-post .share-content .image-container{ height: 100px; }
@@ -25,8 +29,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1403088161" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1403088161" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404117941" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404117941" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -59,11 +63,11 @@
 
 <div class="process-actions">
 	<ul>
-		<li class="action-item"><a class="btn prev" rel="prev" href=""><i class="icon-arrow-back"></i>Edellinen</a></li>
+		<li class="action-item previous-item"><a class="btn prev" rel="prev" href=""><i class="icon-arrow-back"></i>Edellinen</a></li>
+		<li class="action-item next-item"><a class="btn next" rel="next" href="">Jatka<i class="icon-arrow-forward"></i></a></li>
 		<li class="action-item middle-section">
 			<input class="btn" href="" value="Tallenna ja keskeytä">
 		</li>
-		<li class="action-item"><a class="btn next" rel="next" href="">Jatka<i class="icon-arrow-forward"></i></a></li>
 	</ul>
 </div>	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script type="text/javascript" src="../../js/modernizr.min.js"></script>
@@ -115,10 +119,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1403088161">
+	<script id="pl-js-polyfill-insert-1404117941">
 		(function() {
 			if (self != top) {
-				var cb = '1403088161';
+				var cb = '1404117941';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -127,10 +131,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1403088161">
+	<script id="pl-js-insert-1404117941">
 		(function() {
 			if (self != top) {
-				var cb = '1403088161';
+				var cb = '1404117941';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
