added another version of icon lift based on issue #7 description

--- a/patterns/00-atoms-06-buttons/index.html
+++ b/patterns/00-atoms-06-buttons/index.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1404121288" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1404132045" media="all" />
 		<!--[if lt IE 9]>
 			<link href="../../ie8.css" rel="stylesheet"/>
 		<![endif]-->
@@ -29,8 +29,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404121288" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404121288" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404132045" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404132045" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -562,6 +562,28 @@
 							</div>
 						</div>
 					</div>
+					<div id="atoms-icon-lift2-single" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/00-atoms-06-buttons-05-icon-lift2-single/00-atoms-06-buttons-05-icon-lift2-single.html" class="patternLink" data-patternpartial="atoms-icon-lift2-single">Icon Lift2 Single</a></h2>
+						<div class="sg-pattern-body">
+							<div class="lift-button-b participation btn transparent icon-comment icon-as-bg">
+	<p class="count-number" href="//www.foo.bar">17</p>
+	<p class="info-text">Miten nyt kerättävä rahoitus tulisi sijoittaa?</p>
+	<a href="//www.foo.bar" class="lift-button-link">Osallistu</a>
+</div>
+							<div class="sg-code" style="display: none">
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;div class=&quot;lift-button-b participation btn transparent icon-comment icon-as-bg&quot;&gt;
+	&lt;p class=&quot;count-number&quot; href=&quot;//www.foo.bar&quot;&gt;17&lt;/p&gt;
+	&lt;p class=&quot;info-text&quot;&gt;Miten nyt ker&auml;tt&auml;v&auml; rahoitus tulisi sijoittaa?&lt;/p&gt;
+	&lt;a href=&quot;//www.foo.bar&quot; class=&quot;lift-button-link&quot;&gt;Osallistu&lt;/a&gt;
+&lt;/div&gt;
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
 			</div> <!--end #sg-patterns-->
 	
 		</div><!--end .sg-main-->
@@ -617,10 +639,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1404121288">
+	<script id="pl-js-polyfill-insert-1404132045">
 		(function() {
 			if (self != top) {
-				var cb = '1404121288';
+				var cb = '1404132045';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -629,10 +651,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1404121288">
+	<script id="pl-js-insert-1404132045">
 		(function() {
 			if (self != top) {
-				var cb = '1404121288';
+				var cb = '1404132045';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
