--- a/patterns/00-atoms-04-images/index.html
+++ b/patterns/00-atoms-04-images/index.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1404121288" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1404132045" media="all" />
 		<!--[if lt IE 9]>
 			<link href="../../ie8.css" rel="stylesheet"/>
 		<![endif]-->
@@ -29,8 +29,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404121288" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404121288" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404132045" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404132045" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -144,6 +144,24 @@
 							</div>
 						</div>
 					</div>
+					<div id="atoms-count-icon-b" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/00-atoms-04-images-09-count-icon-b/00-atoms-04-images-09-count-icon-b.html" class="patternLink" data-patternpartial="atoms-count-icon-b">Count Icon B</a></h2>
+						<div class="sg-pattern-body">
+							<div class="count-container-b icon-comment icon-as-bg">
+	<a href="//www.foo.bar">17</a>
+</div>
+							<div class="sg-code" style="display: none">
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;div class=&quot;count-container-b icon-comment icon-as-bg&quot;&gt;
+	&lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
+&lt;/div&gt;
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
 			</div> <!--end #sg-patterns-->
 	
 		</div><!--end .sg-main-->
@@ -199,10 +217,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1404121288">
+	<script id="pl-js-polyfill-insert-1404132045">
 		(function() {
 			if (self != top) {
-				var cb = '1404121288';
+				var cb = '1404132045';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -211,10 +229,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1404121288">
+	<script id="pl-js-insert-1404132045">
 		(function() {
 			if (self != top) {
-				var cb = '1404121288';
+				var cb = '1404132045';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
