--- a/patterns/02-organisms-03-sections/index.html
+++ b/patterns/02-organisms-03-sections/index.html
@@ -10,7 +10,7 @@
 		<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.min.css" rel="stylesheet"/>
 		<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 
-		<link rel="stylesheet" href="../../css/style.css?1404121288" media="all" />
+		<link rel="stylesheet" href="../../css/style.css?1404132045" media="all" />
 		<!--[if lt IE 9]>
 			<link href="../../ie8.css" rel="stylesheet"/>
 		<![endif]-->
@@ -29,8 +29,8 @@
 		<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 		<meta http-equiv="pragma" content="no-cache" />
 		
-		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404121288" media="all">
-		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404121288" media="all" />
+		<link rel="stylesheet" href="../../styleguide/css/styleguide.css?1404132045" media="all">
+		<link rel="stylesheet" href="../../styleguide/css/styleguide-specific.css?1404132045" media="all" />
 		
 
 		<!-- End Pattern Lab -->
@@ -681,6 +681,217 @@
 							</div>
 						</div>
 					</div>
+					<div id="organisms-list-lift2" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/02-organisms-03-sections-07-list-lift2/02-organisms-03-sections-07-list-lift2.html" class="patternLink" data-patternpartial="organisms-list-lift2">List Lift2</a></h2>
+						<div class="sg-pattern-body">
+							<div class="list-lift">
+	<div class="navigation">
+		<div class="btn-group enlarged">
+			<a href="#" class="active">Painike 1<span class="count">3</span></a>
+			<a href="#">Painike 2<span class="count">15</span></a>
+			<a href="#">Painike 3</a>
+			<a href="#">Painike 4</a>
+			<a href="#">Painike 5</a>
+			<a href="#">Painike 6<span class="count">66</span></a>
+		</div>
+		<div class="tag-search-container">
+			<ul id="otakantaa-tags" class="tagit-list"></ul>		</div>
+	</div>
+	<div class="content-list">
+		<ul>
+			<li class="single-list-item">
+				<ul class="items-container">
+					<li class="block-item">
+						<div class="lad">
+							<a href="">Lorem lipsum linkki</a>
+							<p class="description">Lorem lipsum kuvaus linkille</p>
+						</div>					</li>
+					<li class="block-item">
+						<div class="count-container-b icon-comment icon-as-bg">
+							<a href="//www.foo.bar">17</a>
+						</div>					</li>
+					<li class="block-item">
+						<div class="lad">
+							<a href="">Lorem lipsum linkki</a>
+							<p class="description">Lorem lipsum kuvaus linkille</p>
+						</div>					</li>
+					<li class="block-item">
+						<ul class="tag-list">
+							<li class="tag-with-icon"><i class="fa fa-university"></i>Esimerkkiministeriö</li>
+							<li>Espoo</li>
+							<li>Vantaa</li>
+							<li>Turvallisuus</li>
+							<li>Esimerkki</li>
+						</ul>					</li>
+				</ul>
+			</li>
+			<li class="single-list-item">
+				<ul class="items-container">
+					<li class="block-item">
+						<div class="lad">
+							<a href="">Lorem lipsum linkki</a>
+							<p class="description">Lorem lipsum kuvaus linkille</p>
+						</div>					</li>
+					<li class="block-item">
+						<div class="count-container-b icon-comment icon-as-bg">
+							<a href="//www.foo.bar">17</a>
+						</div>					</li>
+					<li class="block-item">
+						<div class="lad">
+							<a href="">Lorem lipsum linkki</a>
+							<p class="description">Lorem lipsum kuvaus linkille</p>
+						</div>					</li>
+					<li class="block-item">
+						<ul class="tag-list">
+							<li class="tag-with-icon"><i class="fa fa-university"></i>Esimerkkiministeriö</li>
+							<li>Espoo</li>
+							<li>Vantaa</li>
+							<li>Turvallisuus</li>
+							<li>Esimerkki</li>
+						</ul>					</li>
+				</ul>
+			</li>
+			<li class="single-list-item">
+				<ul class="items-container">
+					<li class="block-item">
+						<div class="lad">
+							<a href="">Lorem lipsum linkki</a>
+							<p class="description">Lorem lipsum kuvaus linkille</p>
+						</div>					</li>
+					<li class="block-item">
+						<div class="count-container-b icon-comment icon-as-bg">
+							<a href="//www.foo.bar">17</a>
+						</div>					</li>
+					<li class="block-item">
+						<div class="lad">
+							<a href="">Lorem lipsum linkki</a>
+							<p class="description">Lorem lipsum kuvaus linkille</p>
+						</div>					</li>
+					<li class="block-item">
+						<ul class="tag-list">
+							<li class="tag-with-icon"><i class="fa fa-university"></i>Esimerkkiministeriö</li>
+							<li>Espoo</li>
+							<li>Vantaa</li>
+							<li>Turvallisuus</li>
+							<li>Esimerkki</li>
+						</ul>					</li>
+				</ul>
+			</li>
+		</ul>
+	</div>
+</div>
+							<div class="sg-code" style="display: none">
+									<div class="sg-code-contains">
+										This pattern contains: 
+											<a href="../../patterns/00-atoms-03-lists-04-tagit/00-atoms-03-lists-04-tagit.html"><code>atoms-tagit</code></a>
+											<a href="../../patterns/00-atoms-02-text-_07-link-and-description/00-atoms-02-text-_07-link-and-description.html"><code>atoms-link-and-description</code></a>
+											<a href="../../patterns/00-atoms-04-images-09-count-icon-b/00-atoms-04-images-09-count-icon-b.html"><code>atoms-count-icon-b</code></a>
+											<a href="../../patterns/00-atoms-03-lists-03-tag-list/00-atoms-03-lists-03-tag-list.html"><code>atoms-tag-list</code></a>
+									</div>
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;div class=&quot;list-lift&quot;&gt;
+	&lt;div class=&quot;navigation&quot;&gt;
+		&lt;div class=&quot;btn-group enlarged&quot;&gt;
+			&lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;Painike 1&lt;span class=&quot;count&quot;&gt;3&lt;/span&gt;&lt;/a&gt;
+			&lt;a href=&quot;#&quot;&gt;Painike 2&lt;span class=&quot;count&quot;&gt;15&lt;/span&gt;&lt;/a&gt;
+			&lt;a href=&quot;#&quot;&gt;Painike 3&lt;/a&gt;
+			&lt;a href=&quot;#&quot;&gt;Painike 4&lt;/a&gt;
+			&lt;a href=&quot;#&quot;&gt;Painike 5&lt;/a&gt;
+			&lt;a href=&quot;#&quot;&gt;Painike 6&lt;span class=&quot;count&quot;&gt;66&lt;/span&gt;&lt;/a&gt;
+		&lt;/div&gt;
+		&lt;div class=&quot;tag-search-container&quot;&gt;
+			&lt;ul id=&quot;otakantaa-tags&quot; class=&quot;tagit-list&quot;&gt;&lt;/ul&gt;		&lt;/div&gt;
+	&lt;/div&gt;
+	&lt;div class=&quot;content-list&quot;&gt;
+		&lt;ul&gt;
+			&lt;li class=&quot;single-list-item&quot;&gt;
+				&lt;ul class=&quot;items-container&quot;&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;div class=&quot;lad&quot;&gt;
+							&lt;a href=&quot;&quot;&gt;Lorem lipsum linkki&lt;/a&gt;
+							&lt;p class=&quot;description&quot;&gt;Lorem lipsum kuvaus linkille&lt;/p&gt;
+						&lt;/div&gt;					&lt;/li&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;div class=&quot;count-container-b icon-comment icon-as-bg&quot;&gt;
+							&lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
+						&lt;/div&gt;					&lt;/li&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;div class=&quot;lad&quot;&gt;
+							&lt;a href=&quot;&quot;&gt;Lorem lipsum linkki&lt;/a&gt;
+							&lt;p class=&quot;description&quot;&gt;Lorem lipsum kuvaus linkille&lt;/p&gt;
+						&lt;/div&gt;					&lt;/li&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;ul class=&quot;tag-list&quot;&gt;
+							&lt;li class=&quot;tag-with-icon&quot;&gt;&lt;i class=&quot;fa fa-university&quot;&gt;&lt;/i&gt;Esimerkkiministeri&ouml;&lt;/li&gt;
+							&lt;li&gt;Espoo&lt;/li&gt;
+							&lt;li&gt;Vantaa&lt;/li&gt;
+							&lt;li&gt;Turvallisuus&lt;/li&gt;
+							&lt;li&gt;Esimerkki&lt;/li&gt;
+						&lt;/ul&gt;					&lt;/li&gt;
+				&lt;/ul&gt;
+			&lt;/li&gt;
+			&lt;li class=&quot;single-list-item&quot;&gt;
+				&lt;ul class=&quot;items-container&quot;&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;div class=&quot;lad&quot;&gt;
+							&lt;a href=&quot;&quot;&gt;Lorem lipsum linkki&lt;/a&gt;
+							&lt;p class=&quot;description&quot;&gt;Lorem lipsum kuvaus linkille&lt;/p&gt;
+						&lt;/div&gt;					&lt;/li&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;div class=&quot;count-container-b icon-comment icon-as-bg&quot;&gt;
+							&lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
+						&lt;/div&gt;					&lt;/li&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;div class=&quot;lad&quot;&gt;
+							&lt;a href=&quot;&quot;&gt;Lorem lipsum linkki&lt;/a&gt;
+							&lt;p class=&quot;description&quot;&gt;Lorem lipsum kuvaus linkille&lt;/p&gt;
+						&lt;/div&gt;					&lt;/li&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;ul class=&quot;tag-list&quot;&gt;
+							&lt;li class=&quot;tag-with-icon&quot;&gt;&lt;i class=&quot;fa fa-university&quot;&gt;&lt;/i&gt;Esimerkkiministeri&ouml;&lt;/li&gt;
+							&lt;li&gt;Espoo&lt;/li&gt;
+							&lt;li&gt;Vantaa&lt;/li&gt;
+							&lt;li&gt;Turvallisuus&lt;/li&gt;
+							&lt;li&gt;Esimerkki&lt;/li&gt;
+						&lt;/ul&gt;					&lt;/li&gt;
+				&lt;/ul&gt;
+			&lt;/li&gt;
+			&lt;li class=&quot;single-list-item&quot;&gt;
+				&lt;ul class=&quot;items-container&quot;&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;div class=&quot;lad&quot;&gt;
+							&lt;a href=&quot;&quot;&gt;Lorem lipsum linkki&lt;/a&gt;
+							&lt;p class=&quot;description&quot;&gt;Lorem lipsum kuvaus linkille&lt;/p&gt;
+						&lt;/div&gt;					&lt;/li&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;div class=&quot;count-container-b icon-comment icon-as-bg&quot;&gt;
+							&lt;a href=&quot;//www.foo.bar&quot;&gt;17&lt;/a&gt;
+						&lt;/div&gt;					&lt;/li&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;div class=&quot;lad&quot;&gt;
+							&lt;a href=&quot;&quot;&gt;Lorem lipsum linkki&lt;/a&gt;
+							&lt;p class=&quot;description&quot;&gt;Lorem lipsum kuvaus linkille&lt;/p&gt;
+						&lt;/div&gt;					&lt;/li&gt;
+					&lt;li class=&quot;block-item&quot;&gt;
+						&lt;ul class=&quot;tag-list&quot;&gt;
+							&lt;li class=&quot;tag-with-icon&quot;&gt;&lt;i class=&quot;fa fa-university&quot;&gt;&lt;/i&gt;Esimerkkiministeri&ouml;&lt;/li&gt;
+							&lt;li&gt;Espoo&lt;/li&gt;
+							&lt;li&gt;Vantaa&lt;/li&gt;
+							&lt;li&gt;Turvallisuus&lt;/li&gt;
+							&lt;li&gt;Esimerkki&lt;/li&gt;
+						&lt;/ul&gt;					&lt;/li&gt;
+				&lt;/ul&gt;
+			&lt;/li&gt;
+		&lt;/ul&gt;
+	&lt;/div&gt;
+&lt;/div&gt;
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
 			</div> <!--end #sg-patterns-->
 	
 		</div><!--end .sg-main-->
@@ -736,10 +947,10 @@
 			
 		}
 	</script>
-	<script id="pl-js-polyfill-insert-1404121288">
+	<script id="pl-js-polyfill-insert-1404132045">
 		(function() {
 			if (self != top) {
-				var cb = '1404121288';
+				var cb = '1404132045';
 				var js = [];
 				if (typeof document !== "undefined" && !("classList" in document.documentElement)) {
 					js.push("styleguide/js/vendor/classlist-polyfill.js");
@@ -748,10 +959,10 @@
 			}
 		})();
 	</script>
-	<script id="pl-js-insert-1404121288">
+	<script id="pl-js-insert-1404132045">
 		(function() {
 			if (self != top) {
-				var cb = '1404121288';
+				var cb = '1404132045';
 				var js = [ { "src": "styleguide/js/vendor/jwerty.js", "dep": [ "styleguide/js/postmessage.js", { "src": "data/annotations.js", "dep": [ "styleguide/js/annotations-pattern.js" ] }, "styleguide/js/code-pattern.js" ] } ];
 				scriptLoader.run(js,cb,'pl-js-insert');
 			}
