--- a/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.escaped.html
+++ b/patterns/04-pages-03-hankesivu-edit-mode/04-pages-03-hankesivu-edit-mode.escaped.html
@@ -216,15 +216,13 @@
     &lt;h1&gt;Muokkaa hanketta&lt;/h1&gt;
     &lt;div class=&quot;hanke-img-container&quot;&gt;
       &lt;img src=&quot;../../images/fpo_16x9.png&quot; alt=&quot;Taustakuva&quot; class=&quot;hanke-bg&quot; /&gt;
-      &lt;div class=&quot;edit-bg icon-container&quot;&gt;
-        &lt;label for=&quot;upload-background-image&quot; class=&quot;upload-file-button&quot;&gt;Vaihda taustakuva&lt;/label&gt;
-        &lt;input type=&quot;file&quot; id=&quot;upload-background-image&quot; /&gt;
+      &lt;div class=&quot;edit-bg input-as-icon-container&quot;&gt;
+        &lt;label class=&quot;upload-file-button&quot;&gt;&lt;input type=&quot;file&quot; id=&quot;upload-background-image&quot;&gt;&lt;i class=&quot;fa fa-plus-circle&quot;&gt;&lt;/i&gt;Vaihda taustakuva&lt;/label&gt;
       &lt;/div&gt;
       &lt;div class=&quot;logo-container&quot;&gt;
         &lt;img src=&quot;../../images/fpo_avatar.png&quot; alt=&quot;Logo&quot; class=&quot;hanke-logo&quot; /&gt;
-        &lt;div class=&quot;edit-logo icon-container&quot;&gt;
-          &lt;label for=&quot;upload-logo-image&quot; class=&quot;upload-file-button&quot;&gt;Vaihda logo&lt;/label&gt;
-          &lt;input type=&quot;file&quot; id=&quot;upload-logo-image&quot; /&gt;
+        &lt;div class=&quot;edit-logo input-as-icon-container&quot;&gt;
+          &lt;label class=&quot;upload-file-button&quot;&gt;&lt;input type=&quot;file&quot; id=&quot;upload-logo-image&quot;&gt;&lt;i class=&quot;fa fa-plus-circle&quot;&gt;&lt;/i&gt;Vaihda logo&lt;/label&gt;
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
@@ -341,7 +339,7 @@
       &lt;!-- Optional field those will be fadeout --&gt;
       &lt;div class=&quot;fadeout clickable&quot;&gt;
         &lt;div id=&quot;hanke-attachments&quot; class=&quot;content-item large&quot;&gt;
-          &lt;h3&gt;Liitteet&lt;/h3&gt;          
+          &lt;h3&gt;Liitteet&lt;/h3&gt;
           &lt;!-- Hanke attachment list --&gt;
           &lt;div class=&quot;attachment-form inline-element&quot;&gt;
             &lt;div class=&quot;form-element attachment-edit&quot;&gt;
